[package]
name = "hoarder"
version = "0.1.0"
authors = ["ahewins <ahewins@flexibleplan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.0"

diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
dotenv = "0.9.0"

csv = "1.1"
chrono = { version = "0.4.9", features = ["serde"] }
serde = { version = "1.0.99", features = ["derive"] }