[package]
name = "hoarder"
version = "0.1.0"
authors = ["ahewins <ahewins@flexibleplan.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
chrono = { version = "0.4.9", features = ["serde"] }
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.41"

rocket = "0.4.2"
diesel = {version = "*", default-features = false, features = ["postgres", "chrono"]}
postgres = { version = "0.15", features = [ "with-chrono" ]}
dotenv = "*"
failure = "0.1.6"
failure_derive = "0.1.6"


[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]